<resources>
    <string name="app_name">Proyecto Barberias</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="labelServicios">Servicios</string>
    <string name="labelAgenda">Agenda</string>
    <string name="servicio4">Tinte barba</string>
    <string name="servicio1">Corte Adulto</string>
    <string name="servicio2">Corte barba</string>
    <string name="servicio3">Corte a Maquina</string>
    <string name="barbero1">Barbero uno</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="labelNombreBarberia">Nombre Barberia</string>
    <string name="labelTelefonoBarberia">Telefono</string>
    <string name="labelNombreBarbero">Nombre Barbero</string>

    <string-array name="schedule">
        <item>9:00 - 9:30</item>
        <item>9:30 - 10:00</item>
        <item>10:30 - 11:00</item>
        <item>11:30 - 12:00</item>
        <item>2:00 - 2:30</item>
        <item>2:30 - 3:00</item>
        <item>3:30 - 4:00</item>
        <item>4:30 - 5:00</item>
    </string-array>
</resources>