<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServicesActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="341dp"
        android:layout_height="310dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="168dp"
                android:layout_height="133dp"
                android:clickable="true"
                android:onClick="goToMaps"
                app:srcCompat="@drawable/img2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:onClick="goToMaps"
                app:srcCompat="@drawable/img3" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewServicio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/servicio1" />

            <TextView
                android:id="@+id/textViewServicio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/servicio2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:onClick="goToMaps"
                app:srcCompat="@drawable/img1" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="152dp"
                android:layout_height="136dp"
                android:clickable="true"
                android:onClick="goToMaps"
                app:srcCompat="@drawable/img5" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewServicio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/servicio3" />

            <TextView
                android:id="@+id/textViewServicio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/servicio4" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textViewUsuario"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>