<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioBarberoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldNombreBarberia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/labelNombreBarberia"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textNombreBarberia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldTelefonoBarberia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/labelTelefonoBarberia"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textTelefonoBarberia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldNombreBarbero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/labelNombreBarbero"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textNombreBarbero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <Button
                    android:id="@+id/textButtonCargarImagen"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="cargarImagen"
                    android:text="Cargar Imagen Barberia"
                    app:icon="@drawable/camara" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <ImageView
                    android:id="@+id/imageBarberia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:srcCompat="@tools:sample/avatars" />

                <Button
                    android:id="@+id/buttonGuardar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="guardarFormulario"
                    android:text="Guardar" />

                <Button
                    android:id="@+id/buttonBorrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="borrarFormulario"
                    android:text="Borrar Formulario" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
